--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,5 +20,7 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Nanum Myeongjo", serif;
+  font-weight: 400;
+  font-style: normal;
 }
