--- a/src/app/components/navmenu/styles.module.css
+++ b/src/app/components/navmenu/styles.module.css
@@ -7,11 +7,113 @@
     align-items: center;
 }
 
+.mobContainer {
+    display: none;
+}
+
 .item {
     font-size: 1.5rem;
     cursor: pointer;
     margin: 0 100px;
 }
+
+@media only screen and (max-width: 480px) {
+    .container {
+        display: none;
+    }
+
+    .mobContainer {
+        display: flex;
+        width: 100%;
+        height: 70px;
+    }
+
+    .menuBurger {
+        width: 40px;
+        height: 30px;
+        display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        margin: 14px;
+    }
+
+    .menuLine {
+        border: 1px solid black;
+    }
+
+    .item {
+        font-size: 1.2rem;
+        width: 65px;
+        text-align: center;
+        opacity: 1;
+        margin: 5px 0;
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        width: 100%;
+        top: 70px;
+        align-items: center;
+        background-color: white;
+        box-shadow: 0 3px 2px -3px;
+        height: 120px;
+    }
+
+    .slideIn {
+        animation: menuAnimationIn .4s ease-out forwards;
+        pointer-events: auto;
+        z-index: 2;
+    }
+
+    .slideOut {
+        animation: menuAnimationOut .4s ease-in forwards;
+        pointer-events: none;
+        z-index: -1;
+    }
+
+
+    @keyframes menuAnimationIn {
+        from {
+            transform: translateY(-100%);
+            opacity: 0;
+        }
+
+        to {
+            transform: translateY(0);
+            opacity: 1;
+        }
+    }
+
+    @keyframes menuAnimationOut {
+        0% {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        100% {
+            transform: translateY(-100%);
+            opacity: 0;
+        }
+    }
+
+    @keyframes textRevealAnim {
+        0% {
+            transform: translateY(0);
+            opacity: 1;
+        }
+
+        100% {
+            transform: translateY(-100%);
+            opacity: 0;
+        }
+    }
+}
+
+
+
+
 
 .underline {
     border-bottom: 1px solid black;
