--- a/src/app/components/form/styles.module.css
+++ b/src/app/components/form/styles.module.css
@@ -1,15 +1,24 @@
 .container {
+    position: absolute;
     margin: 20px;
     width: 400px;
-    height: 500px;
+    height: 550px;
     display: flex;
     justify-content: center;
+    align-items: center;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 999;
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0px 2px 8px -3px;
 }
 
 .formContainer {
     display: flex;
     flex-direction: column;
-    height: 400px;
+    height: 500px;
     justify-content: space-around;
     align-items: center;
 }
