--- a/src/app/components/form/styles.module.css
+++ b/src/app/components/form/styles.module.css
@@ -1,18 +1,28 @@
-.container {
+.backdrop {
+    width: 100%;
+    height: 100vh;
     position: absolute;
+    background-color: rgba(0, 0, 0, .5);
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    z-index: 998;
+}
+
+.container {
     margin: 20px;
     width: 400px;
     height: 550px;
     display: flex;
     justify-content: center;
     align-items: center;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
     z-index: 999;
-    background-color: white;
+    background-color: #fff;
     border-radius: 5px;
-    box-shadow: 0px 2px 8px -3px;
+    box-shadow: 0 2px 8px -3px;
 }
 
 .formContainer {
