--- a/src/app/components/form/styles.module.css
+++ b/src/app/components/form/styles.module.css
@@ -12,6 +12,16 @@
     z-index: 998;
 }
 
+.closeIcon {
+    background-image: url('/close.svg');
+    height: 20px;
+    width: 20px;
+    position: absolute;
+    top: 10px;
+    right: 16px;
+    cursor: pointer;
+}
+
 .container {
     margin: 20px;
     width: 400px;
@@ -23,6 +33,7 @@
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 2px 8px -3px;
+    position: relative;
 }
 
 .formContainer {
